# orders-service

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  main_api.py  orders.db  pyproject.toml
.hypothesis/constants/: 02ca3b3629ffd4c0  0bd74790d4139e56  215a7fe94104afb5  262d93ddc5871272  2ee44bd281d5a4a6  32cafbc008def96b  4849d04c504247be  55537dc445fd1f71  562dba88947e11a2  5ac5db0377e2baa5  5b15725e7a4578a3  5cdc0bc44ef16092  67d21362177bcaa9  8272a9479859a94b  83120ddc7d6b3788  89803d60e7189b84  91e94c89dab92bd4  9285715c76493629  a0546e04152f193c  a1b62a4e2f231d2c  a49733ee2462cac0  a62f2120a3970f2c  ab51f48a9d4be75a  bdb551df1c9fd16d  bdc961777aaaf02c  bf2920c241534065  c6fd034d55d877c2  c89cd7b5e81bda3e  da39a3ee5e6b4b0d  e03357be4ef2b0bd  e29f544cd68e79f7  e73fc696e2723c00  ea7b9ad069822b20  ec2bb10b83824713  fa22699cdc4d7a9b  fc234854eb61c27f
app/: main.py
app/adapters/: memory_order_repository.py  sql_order_repository.py
app/api/: dependencies.py
app/api/routers/: auth.py  orders.py
app/application/dtos/: order_dtos.py
app/application/use_cases/: order_use_cases.py
app/clients/: order_client.py
app/database/: crud.py  engine.py  models.py
app/domain/entities/: order.py
app/domain/ports/: notification_port.py  order_repository.py
app/infrastructure/api/: dependencies.py
app/infrastructure/api/routers/: auth.py  orders.py
app/infrastructure/database/: crud.py  models.py
app/infrastructure/notifications/: http_notification_adapter.py
app/infrastructure/repositories/: memory_order_repository.py  sql_order_repository.py
app/loaders/: csv_order_loader.py  order_loader.py
app/ml/: order_classifier.py
app/models/: item.py  order.py  order_schemas.py  type_definitions.py
app/patterns/: cached_repository.py  external_provider_adapter.py  pricing_strategy.py
app/ports/: order_repository.py
app/services/: concurrencia_service.py  descuento_service.py  metrics_service.py  order_domain_service.py  order_service.py
app/utils/: logger.py  order_mapper.py  retry.py  validators.py
data/: orders.csv  orders.json  orders_ml.csv  smocker_bulk_mocks.json  smocker_mocks.json
migrations/: env.py
migrations/versions/: 234a387ee77d_create_users_orders_order_items_tables.py  bcba105624d7_add_password_to_users.py
reports/: metrics.json  report.csv
tests/: test_descuento.py  test_hexagonal.py  test_orders_api.py  test_patterns.py  test_solid.py
